[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cppyyloader"
authors = [{name = "Gabriel Kabbe", email = "gabriel.kabbe@mail.de"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/gab50000/cppyyloader"
